fixed footer to always remain at the bottom, while also fixing responsiveness on mobile

--- a/main.scss
+++ b/main.scss
@@ -13,10 +13,9 @@ $neutral2: hsl(218, 22%, 67%);
 
 html {
   font-family: "Karla", sans-serif;
-  height: 100vh;
 
   body {
-    height: 100%;
+    min-height: 100vh;
     background: $neutral1;
     display: flex;
     flex-direction: column;
@@ -126,5 +125,9 @@ html {
         color: white;
       }
     }
+  }
+
+  footer {
+    margin-top: auto;
   }
 }
